objects/Project_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Project Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Project Manager</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solutions Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Project Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>